--- a/src/main/resources/currencyfair/public/index.html
+++ b/src/main/resources/currencyfair/public/index.html
@@ -6,6 +6,11 @@
     <meta name="theme-color" content="#000000">
     <link rel="stylesheet" href="%PUBLIC_URL%/semantic.min.css">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.png">
+    <script src="https://www.amcharts.com/lib/3/ammap.js"></script>
+    <script src="https://www.amcharts.com/lib/3/maps/js/worldLow.js"></script>
+    <script src="https://www.amcharts.com/lib/3/plugins/export/export.min.js"></script>
+    <link rel="stylesheet" href="https://www.amcharts.com/lib/3/plugins/export/export.css" type="text/css" media="all" />
+    <script src="https://www.amcharts.com/lib/3/themes/light.js"></script>
     <title>CurrencyFair</title>
   </head>
   <body>
